--- a/createUser.html
+++ b/createUser.html
@@ -60,7 +60,7 @@ function passwordMatchCheck()
               <div class="card-body">
                 <h1 class="mb-4">Create Account</h1>
                 <form action= "createUser_handler.php" method ="post">
-                  <div class="form-group"> <label>Email address</label>
+                  <div class="form-group"> <label>Email</label>
                     <input type="email" id="emailAdd" name="emailAdd" class="form-control"  minlength="<?php echo $minLength;?>" placeholder="Enter email" maxlength="<?php echo $maxLengths['emailAdd'];?>" required='required'> </div>
                   <div class="form-group"> <label>Password</label>
                     <input type="password" id="passwd" name="passwd" class="form-control"  minlength="<?php echo $minLength;?>" maxlength="<?php echo $maxLengths['passwd'];?>" placeholder="Password" required='required' onchange='passwordMatchCheck();' > </div>
